# Grocery-Tracker

./: .env.example  .flaskenv  .gitignore  CHANGES_APPLIED.md  IMPROVEMENTS.md  IMPROVE_PROMPT.md  LICENSE  README.md  analyze_receipts.py  config.py  create_user.py  db.py  helpers.py  main.py  microtracker.py  notes_personal.md  person.py  pyproject.toml  receipts.db  receipts_schema.sql  requirements.txt  sample_db.py  sqlite_db.py  test_db.py  test_gemini_OCR.py  test_qwen_model_for_OCR.py  test_receipts.py
financial_tracker/: streamlit_app.py
financial_tracker/pages/: 1_Configuration.py  2_Transaction_Browser.py
g_tracker/: __init__.py  auth_routes.py  db.py  deprecated_db.py  forms.py  helpers.py  insight.py  item_table.py  llm_quota.py  models.py  receipts.py  welcome.py  wsgi.py
g_tracker/gridjs_sample/: basic_table.py  create_fake_users.py  get_name_in_receipt.py  item_table.py  models.py  modules.py  receipt_table.py  receipt_table2.py
g_tracker/static/: styles.css
g_tracker/templates/: forgot_password.html  index.html  insight.html  item_table.html  layout.html  login.html  receipt.html  receipt_table.html  register.html  reset_password.html
instance/: db.sqlite
receipts/: try_deskew.py
receipts/cache/: 00371533-86f2-46b9-a479-2f73ccbfa0ad_jpeg.json  01f24332-7b37-428a-bddd-e9e3d421c91e_jpeg.json  04787536-fb4e-4053-8381-5c020646d4ee_jpg.json  0715a727-a35f-4083-a9a2-0d2f919ce94d_jpeg.json  07e30d77-a613-4e76-8221-37d52e0de19c_jpeg.json  098c5801-de21-4a84-95ab-7e1e19e49111_jpg.json  (+179 more)
tests/: test_llm_quota.py
(+5 files in other folders)
